# Engine

./: CMakeLists.txt  LICENSE  README.md
docs/: Doxyfile.in
libs/glad/: glad.c
libs/glad/include/glad/: glad.h
src/: main.cpp
src/engine/: Engine.cpp  EngineTime.cpp
src/engine/include/: Engine.h  EngineTime.h
src/platform/: Platform.cpp
src/platform/include/: Platform.h
